testsuite/tests/rep-poly/UnliftedNewtypesLevityBinder.stderr

UnliftedNewtypesLevityBinder.hs:16:7: error:
    • The newtype constructor argument
      does not have a fixed runtime representation:
        a :: TYPE r
    • In the expression: IdentC
      In an equation for ‘bad’: bad = IdentC
